[package]
name = "learn-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
bytemuck = { version = "1.11.0", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.9.0"
image = { version = "0.24.3", default-features = false, features = ["png", "jpeg"] }
log = "0.4.17"
pollster = "0.2.5"
wgpu = "0.13.1"
winit = "0.26.1"
